add AllMatchesUseCase